--- a/python/Slide_02_1_Control_of_flow_function.ipynb
+++ b/python/Slide_02_1_Control_of_flow_function.ipynb
@@ -70,7 +70,9 @@
    "source": [
     "height = 30\n",
     "width = 20\n",
-    "# 아래에 코드를 작성하세요.\n"
+    "# 아래에 코드를 작성하세요.\n",
+    "area  = width * height\n",
+    "perimeter 2 * (width + height)"
    ]
   },
   {
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -117,7 +119,11 @@
    },
    "outputs": [],
    "source": [
-    "# 위의 코드를 함수로 아래와 같이 작성할 수 있습니다.\n"
+    "# 위의 코드를 함수로 아래와 같이 작성할 수 있습니다.\n",
+    "def rectangle(width, height):\n",
+    "    area = width * height\n",
+    "    perimeter = 2 * (width + height)\n",
+    "    print(f'직사각형 둘레 : {perimeter},면적: {area}입니다')"
    ]
   },
   {
@@ -517,11 +523,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# args는 tuple!\n"
+    "# args는 tuple!\n",
+    "def my_func(*args):\n",
+    "    print(type(args))\n",
+    "    \n",
+    "my_func(1,2)"
    ]
   },
   {
@@ -557,15 +575,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# 아래에 코드를 작성해주세요."
+    "# 아래에 코드를 작성해주세요.\n",
+    "def my_sum(*args):\n",
+    "    #no sum\n",
+    "    r = 0\n",
+    "    for n in args:\n",
+    "        r+=n\n",
+    "    return r\n",
+    "\n",
+    "print(my_sum(1,2,3,4))"
    ]
   },
   {
@@ -607,24 +641,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ko': '안녕', 'en': 'hi'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 딕셔너리 생성 함수 예시\n"
+    "# 딕셔너리 생성 함수 예시\n",
+    "d = dict(ko='안녕',en='hi')\n",
+    "print(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ko': '안녕', 'en': 'Hi'}\n",
+      "ko  :  안녕\n",
+      "en  :  Hi\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# fake_dict\n"
+    "# fake_dict\n",
+    "def my_dict(**kwargs):\n",
+    "    print(kwargs)\n",
+    "    for kw in kwargs:\n",
+    "        print(kw,' : ',kwargs[kw])\n",
+    "    \n",
+    "print(my_dict(ko='안녕',en='Hi'))"
    ]
   },
   {
@@ -644,11 +705,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ko': '안녕', 'en': 'Hi'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 아래에 코드를 작성해주세요.\n"
+    "# 아래에 코드를 작성해주세요.\n",
+    "def my_dict(**kwargs):\n",
+    "    return kwargs\n",
+    "\n",
+    "d = my_dict(ko='안녕',en='Hi')\n",
+    "print(d)"
    ]
   },
   {
@@ -667,30 +741,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# user 검증(유사 로그인)\n"
+    "# user 검증(유사 로그인)\n",
+    "def user(username,password,password_check):\n",
+    "    if password == password_check:\n",
+    "        print(f'{username}님, 회원가입이 완료되었습니다')\n",
+    "    else:\n",
+    "        print('비밀번호가 잘못 되었습니다.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "my_account = {\n",
+    "    'username' : '홍길동',\n",
+    "    'password' : '12341234',\n",
+    "    'password_check' : '12341234'\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "홍길동님, 회원가입이 완료되었습니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "user(**my_account)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -727,9 +822,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-f5cdd7b7f4bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mstr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'4'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "str = '4'\n",
     "str(3)"
@@ -751,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -764,56 +871,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(a)에 무엇이 출력되는지 확인해보세요.\n"
+    "# print(a)에 무엇이 출력되는지 확인해보세요.\n",
+    "a = 1\n",
+    "def localscope(a):\n",
+    "    print(a)\n",
+    "\n",
+    "\n",
+    "localscope(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "global_num이 5으로 설정되었습니다.\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 전역 변수를 바꿀 수 있을 까요?\n"
+    "# 전역 변수를 바꿀 수 있을 까요?\n",
+    "global_num = 3\n",
+    "def localscope2():\n",
+    "    global_num = 5\n",
+    "    print(f'global_num이 {global_num}으로 설정되었습니다.')\n",
+    "    \n",
+    "localscope2()\n",
+    "print(global_num)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "global_num이 5으로 설정되었습니다.\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 굳이 전역에 있는 변수를 바꾸고 싶다면, 아래와 같이 선언할 수 있습니다.\n"
+    "# 굳이 전역에 있는 변수를 바꾸고 싶다면, 아래와 같이 선언할 수 있습니다.\n",
+    "global_num = 3\n",
+    "def localscope2():\n",
+    "    global global_num\n",
+    "    global_num = 5\n",
+    "    print(f'global_num이 {global_num}으로 설정되었습니다.')\n",
+    "    \n",
+    "localscope2()\n",
+    "print(global_num)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'YouTubeVideo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-c9503f78e23c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# scope youtube embed\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# from IPython.display import YouTubeVideo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mYouTubeVideo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'yH_1vwnp3ZQ'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'100%'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'YouTubeVideo' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# scope youtube embed\n",
     "# from IPython.display import YouTubeVideo\n",
-    "YouTubeVideo('yH_1vwnp3ZQ', width='100%')"
+    "YouTubeVideo('yH_1vwnp3ZQ', width='100%')\n"
    ]
   },
   {
@@ -851,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   },
   "toc": {
    "base_numbering": 1,
