D03 | 190104 AM | Fucntion Problem & swexpert

--- a/python/Slide_02_1_Control_of_flow_function.ipynb
+++ b/python/Slide_02_1_Control_of_flow_function.ipynb
@@ -586,20 +586,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "15\n"
      ]
     }
    ],
    "source": [
     "# 아래에 코드를 작성해주세요.\n",
-    "def my_sum(*args):\n",
+    "def my_max(*args):\n",
     "    #no sum\n",
     "    r = 0\n",
     "    for n in args:\n",
-    "        r+=n\n",
+    "        if n > r:\n",
+    "            r = n\n",
     "    return r\n",
     "\n",
-    "print(my_sum(1,2,3,4))"
+    "print(my_max(1,2,15,4,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_max2(*args):\n",
+    "    result = None\n",
+    "    \n",
+    "    for n in args:\n",
+    "        if not result:\n",
+    "            result = n\n",
+    "        else:\n",
+    "            if n > result:\n",
+    "                result = n\n",
+    "    return result\n",
+    "\n",
+    "print(my_max2(1,2,5,7,3,2,1))"
    ]
   },
   {
