D04 | 190107 PM | Problems & SWEXPERT

--- a/python/problems/D03_problem_00.ipynb
+++ b/python/problems/D03_problem_00.ipynb
@@ -138,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +329,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# answer\n",
+    "def jw_bin(n):\n",
+    "    result = ''\n",
+    "    while n>0:\n",
+    "        q = n//2\n",
+    "        r = n%2\n",
+    "        result = str(r) + result\n",
+    "        n = q\n",
+    "    return '0b' + result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 재귀함수 사용\n",
+    "def my_bin2(n):\n",
+    "    if n==1:\n",
+    "        return '0b1'\n",
+    "    else:\n",
+    "        return my_bin2(n//2) + str(n%2)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +370,8 @@
      "text": [
       "True\n",
       "True\n",
-      "True\n"
+      "True\n",
+      "0b1010\n"
      ]
     }
    ],
@@ -344,7 +379,9 @@
     "# my_bin 예제 입력 및 출력\n",
     "print(my_bin(4096) == bin(4096))\n",
     "print(my_bin(5) == bin(5))\n",
-    "print('0b1111' == bin(15))"
+    "print('0b1111' == bin(15))\n",
+    "\n",
+    "print(my_bin2(10))"
    ]
   }
  ],
