--- a/python/problems/D05_problem_01.ipynb
+++ b/python/problems/D05_problem_01.ipynb
@@ -48,7 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#teacher\n",
+    "def shorten(name):\n",
+    "    name_list = name.split()\n",
+    "    for i in range(1,len(name_list)-1):\n",
+    "        name_list[i]= name_list[i][0]+'.'\n",
+    "    return ' '.join(name_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +116,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#teacher\n",
+    "def reverse_letter(string):\n",
+    "    result = ''\n",
+    "    for char in string:\n",
+    "        if char.isalpha():\n",
+    "            result += char\n",
+    "    return result[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_letter(string):\n",
+    "    result = [a for a in string if a.isalpha()]\n",
+    "    return ''.join(result[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -156,20 +196,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#teacher\n",
+    "def pick_and_sum(s):\n",
+    "    for x in s:\n",
+    "        if not x.isdigit():\n",
+    "            s = s.replace(x,' ')\n",
+    "            \n",
+    "    return sum([int(n) for n in s.split()])\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[' ', ' ', '8', ' ', ' ', '1', '2']\n",
-      "  8  12\n",
-      "[8, 12]\n",
       "20\n",
-      "[' ', ' ', ' ', '3', '0', ' ', ' ', ' ', ' ', ' ', '2', '0', ' ', ' ', ' ', ' ', ' ', '1', '0', ' ', '0', ' ', '1', '2', '0', '3', ' ', ' ', ' ', ' ', ' ', '9', '1', '4', ' ', ' ', '3', ' ', '1', '3', '4', '9', ' ', ' ', ' ', '1', '0', '2', ' ', '4', ' ', ' ', ' ', ' ', ' ', ' ']\n",
-      "   30     20     10 0 1203     914  3 1349   102 4      \n",
-      "[30, 20, 10, 0, 1203, 914, 3, 1349, 102, 4]\n",
       "3635\n"
      ]
     }
